2013-06-12  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl: Fixed oops. Forgot to add new package to index.

2013-06-05  Andreas Kupries  <andreask@activestate.com>

	* canvas_gradient.man: [Ticket [3651bb1b96]] Integrated
	* canvas_gradient.tcl: MaxJarek's canvas gradient package.

2013-03-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.6 ========================
	* 

2012-05-11  Andreas Kupries  <andreask@activestate.com>

	* ../../examples/canvas/osm.tcl: Integrated code/patch contributed
	  by <tomasz@tuxteam.de> to use the new map::geocode::nominatim
	  package for the resolution of geographical names. Integrated
	  patch contributed by same to use the new zoom fitting
	  functionality of map::slippy (v 0.5).

2012-02-23  Andreas Kupries  <andreask@activestate.com>

	* ../../examples/canvas/demo_editpoints.tcl: Tweaked demo GUIs
	* ../../examples/canvas/demo_draghigh.tcl:

	* canvas_epoints.man: Tweaked the options for callbacks a bit.
	* canvas_epoints.tcl: All packages now use a -data-cmd options
	  for the reporting of edit operations.

	* canvas_equad.man: New package, an editor for a quadrilateral,
	* canvas_equad.tcl: attachable to any canvas. Can be constrained
	* pkgIndex.tcl: to accept only convex quadrilaterals.
	* ../../examples/canvas/demo_editquad.tcl:
	* ../../examples/canvas/demo_editquadconvex.tcl:

	* canvas_epoly.man: New package, an editor for a poly-line,
	* canvas_epoly.tcl: attachable to any canvas.
	* pkgIndex.tcl:
	* ../../examples/canvas/demo_editpoly.tcl:
	
	* canvas_trlines.tcl: New helper packages managing rubberbands.
	* canvas_trlines.man:
	* pkgIndex.tcl:

2012-02-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* canvas_epoints.man: New package, an editor for point clouds,
	* canvas_epoints.tcl: attachable to any canvas.
	* pkgIndex.tcl:
	* ../../examples/canvas/demo_editpoints.tcl:

2012-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
